--- a/index.css
+++ b/index.css
@@ -3,38 +3,92 @@
     color: black;
 }
 
-@media screen and (max-width: 550px) {
+@media screen and (max-width: 510px) {
     .page {
         background-color: green;
     }
-  }
+}
 
-  @media screen and (max-height: 700px) {
-    .page {
-        color: aqua;
-    }
-  }
-
-  @media screen and (max-width: 540px) {
+@media screen and (max-width: 500px) {
     .page {
         background-color: yellow;
     }
-  }
+}
 
-  @media screen and (max-height: 690px) {
+@media screen and (max-width: 490px) {
+    .page {
+        background-color: violet;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .page {
+        background-color: blue;
+    }
+}
+
+@media screen and (max-width: 470px) {
+    .page {
+        background-color: black;
+    }
+}
+
+@media screen and (max-width: 460px) {
+    .page {
+        background-color: white;
+    }
+}
+
+@media screen and (max-width: 450px) {
+    .page {
+        background-color: grey;
+    }
+}
+
+@media screen and (max-width: 440px) {
+    .page {
+        background-color: orange;
+    }
+}
+
+@media screen and (max-width: 430px) {
+    .page {
+        background-color: pink;
+    }
+}
+
+@media screen and (max-height: 700px) {
+    .page {
+        color: aqua;
+    }
+}
+ 
+@media screen and (max-height: 690px) {
     .page {
         color: purple;
     }
-  }
+}
 
-  @media screen and (max-width: 530px) {
-    .page {
-        background-color: brown;
-    }
-  }
-
-  @media screen and (max-height: 680px) {
+@media screen and (max-height: 680px) {
     .page {
         color: navy;
     }
-  }
+}
+
+@media screen and (max-height: 670px) {
+    .page {
+        color: orange;
+    }
+}
+
+@media screen and (max-height: 660px) {
+    .page {
+        color: pink;
+    }
+}
+
+@media screen and (max-height: 650px) {
+    .page {
+        color: white;
+    }
+}
