--- a/index.css
+++ b/index.css
@@ -3,57 +3,63 @@
     color: black;
 }
 
-@media screen and (max-width: 350px) {
+@media screen and (max-width: 360px) {
     .page {
         background-color: green;
     }
 }
 
-@media screen and (max-width: 345px) {
+@media screen and (max-width: 359px) {
     .page {
         background-color: yellow;
     }
 }
 
-@media screen and (max-width: 335px) {
+@media screen and (max-width: 358px) {
     .page {
         background-color: violet;
     }
 }
 
-@media screen and (max-width: 330px) {
+@media screen and (max-width: 357px) {
     .page {
         background-color: blue;
     }
 }
 
-@media screen and (max-width: 325px) {
+@media screen and (max-width: 356px) {
     .page {
         background-color: black;
     }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 355px) {
     .page {
         background-color: white;
     }
 }
 
-@media screen and (max-width: 315px) {
+@media screen and (max-width: 354px) {
     .page {
         background-color: grey;
     }
 }
 
-@media screen and (max-width: 310px) {
+@media screen and (max-width: 353px) {
     .page {
         background-color: orange;
     }
 }
 
-@media screen and (max-width: 300px) {
+@media screen and (max-width: 352px) {
     .page {
         background-color: pink;
+    }
+}
+
+@media screen and (max-width: 351px) {
+    .page {
+        background-color: gold;
     }
 }
 
